# usipipoproxy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
apps/backend/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QWEN.md  README.md  REDIS_SETUP.md  alembic.ini  docker-compose.yml  example.env  mypy.ini  pyproject.toml
apps/backend/deploy/: README.md  usipipo-backend.service
apps/backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TRONDEALER_TUTORIAL.md  trondealer-api.md
apps/backend/docs/plans/: 2026-04-03-backend-endpoint-bug-fixes.md  2026-04-03-backend-endpoint-bugs-design.md  2026-04-03-fix-401-payments-subscription-handlers-design.md  2026-04-03-fix-401-payments-subscription-handlers.md  2026-04-03-vpn-key-server-id-fix-design.md  2026-04-03-vpn-key-server-id-fix-plan.md  2026-04-05-backend-docker-release-design.md  2026-04-05-backend-docker-release-implementation.md  2026-04-05-user-id-universal-migration-design.md  2026-04-05-user-id-universal-migration-gaps-design.md  2026-04-05-user-id-universal-migration-gaps-implementation.md  2026-04-05-user-id-universal-migration-implementation.md  2026-05-11-asyncpg-to-psycopg2-migration-design.md  2026-05-11-asyncpg-to-psycopg2-migration-plan.md  2026-05-11-wireguard-only-refactor-design.md  2026-05-11-wireguard-only-refactor-implementation.md
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0b7731b59cc0_merge_encrypt_agent_api_keys_with_.py  176f92841904_add_agent_api_keys_table_and_server_.py  2026_03_30_0001_admin_audit_logs.py  2026_03_30_0002_staff_roles.py  2026_04_01_0000_encrypt_existing_agent_api_keys.py  2026_04_05_0000_create_wireguard_metrics_table.py  2026_04_05_0001_user_id_universal_gaps.py  2026_05_11_2300_update_configuration_for_supabase.py  6f80ea3bfca9_change_vpn_keys_user_id_from_integer_to_.py  838b09c44981_add_devices_table.py  a0fe055ac6cb_change_vpn_keys_bytes_columns_to_bigint.py  a3c6f868712d_initial_schema_uuid.py  add_server_id_to_vpn_keys.py  c28f4257bb35_migrate_vpn_keys_to_uuid_add_status.py  create_server_metrics.py  create_vpn_servers.py  d65d5b972e88_add_auth_providers_table.py  ef961ce7ef38_migrate_subscription_user_id_to_uuid.py  f770a6670f95_merge_agent_api_keys_with_admin_audit_.py
apps/backend/scripts/: fix_missing_referral_credits.py  install-systemd-service.sh
apps/backend/src/: __init__.py  __main__.py  main.py
apps/backend/src/infrastructure/: cache.py  redis.py
apps/backend/src/shared/: config.py  encryption.py  logger.py  rate_limiter.py
apps/backend/tests/: __init__.py  conftest.py
apps/backend/tests/e2e/: README.md  __init__.py  conftest.py  test_vpn_key_creation_flow.py  test_vpn_key_deletion_flow.py  test_vpn_key_list_operations.py
apps/backend/tests/shared/: __init__.py
apps/backend/tests/unit/: test_consumption_billing_service.py.DISABLED  test_consumption_invoice_repository.py  test_data_package_repository.py  test_data_package_service.py  test_referral_repository.py  test_referral_schemas.py  test_referral_service.py  test_subscription_payment_service.py.DISABLED  test_subscription_repository.py.DISABLED  test_subscription_service.py.DISABLED  test_subscription_transaction_repository.py.DISABLED  test_ticket_repository.py  test_ticket_service.py  test_user_bonus_service.py  test_user_routes.py  test_wallet_management_service.py  test_wallet_pool_repository.py  test_wallet_repository.py  test_webhook_security_service.py  test_webhook_security_standalone.py
apps/bot/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt  usipipo-telegram-bot.service
apps/bot/.github/CODE_QUALITY_RULES/: 01-kiss-principle.md  02-delete-code-fearlessly.md  03-code-not-comments.md  04-atomic-commits.md  05-explain-simply.md  06-make-it-work-first.md  07-small-commits.md  AGENT_INSTRUCTIONS.md
apps/bot/.github/workflows/: ci.yml  release.yml
apps/bot/docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  integration-test-report-2026-04-04.md
apps/bot/docs/plans/: 2026-03-23-telegram-bot-migration-design.md  2026-03-23-telegram-bot-migration-plan.md  2026-04-04-referral-share-button-design.md  2026-04-04-referral-share-button-plan.md  2026-04-04-referral-ux-fixes-design.md  2026-04-04-referral-ux-fixes-plan.md  2026-04-05-docker-release-design.md  2026-04-05-docker-release-implementation.md
apps/bot/src/: __main__.py  main.py
apps/bot/src/bot/: __init__.py
apps/bot/src/infrastructure/: __init__.py  api_client.py  config.py  error_handler.py  (+3 more)
apps/bot/tests/: HANDLER_TEST_REPORT.md  TEST-VERIFICATION.md  conftest.py  test_main.py
(+310 files in other folders)
