[project]
name = "usipipo-backend"
version = "0.26.0"
description = "Backend API principal del ecosistema uSipipo"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "uSipipo Team", email = "usipipo@gamil.com"}]

dependencies = [
    "usipipo-commons @ file:///home/mowgli/usipipo/common",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "cryptography>=42.0.0",  # For API key encryption
    "loguru>=0.7.0",  # For structured logging
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "mypy>=1.13.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "types-passlib>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (ruff format handles this)
    "ARG001", # unused function argument (common in FastAPI lifespan, decorators)
    "ARG002", # unused method argument (common in interfaces)
    "B008",   # function calls in argument defaults (needed for dependencies)
    "B904",   # raise without from (acceptable for re-raising as different exception type)
    "SIM102", # collapsible if statements (sometimes reduces readability)
    "F821",   # undefined name (false positive with SQLAlchemy forward references)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
known-third-party = ["usipipo_commons"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Per-file ignores for intentional patterns
[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = [
    "E402",  # Imports after settings config (intentional pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
